[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandau-checkin"
version = "0.2.0"
description = "One-shot Sandau holiday report client"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
sandau-checkin = "sandau_checkin.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
